# static-web-db

./: Cargo.toml  site.db
.cargo/: config
.github/workflows/: rust.yml
src/: db.rs  main.rs
