[package]
name = "static-web-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "tcp", "http1", "stream"] }
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "net"] }
rusqlite = { version = "0.29", features = ["blob"] }
async-stream = "0.3"
httpdate = "1.0"
