[package]
name = "static-web-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.1", features = ["server", "http1"] }
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
flume = { version = "0.11.0", default-features = false, features = ["async"] }
rusqlite = { version = "0.30", features = ["blob"] }
async-stream = "0.3"
httpdate = "1.0"
hyper-util = { version = "0.1.1", features = ["server", "tokio"] }
http-body = "1.0.0"
http-body-util = "0.1.0"

